[project]
name = "pair-trading-research"
version = "0.2.0-dev"
description = "Cointegration-based pairs trading research pipeline with rolling hedge ratios and transaction-cost-aware backtesting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "yfinance>=0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"